[metadata]
name = scshift
version = 0.1.0
author = Mingze Dong
author_email = mingze.dong@yale.edu
description = scaling deep identifiable models enables zero-shot characterization of single-cell biological states
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MingzeDong/scShift
project_urls =
    Bug Tracker = https://github.com/MingzeDong/scShift/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scanpy
    torch
    pytorch_lightning
    tqdm
    scvi-tools>=0.15.0, <=0.16.2
    scikit-learn
    scipy
    statsmodels
    anndata

[options.packages.find]
where = 
